src/objects/cb5__CBModelingLine__c.object
<CustomObject>
    <description>Mapping one object field to another</description>
    <fields>
        <fullName>cb5__CBModelingRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Modeling Rule</label>
        <referenceTo>cb5__CBModelingRule__c</referenceTo>
        <relationshipLabel>CB Modeling Lines</relationshipLabel>
        <relationshipName>CBModelingLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__Default__c</fullName>
        <label>Default</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__ResultFieldFrom__c</fullName>
        <defaultValue>&apos;Parent&apos;</defaultValue>
        <label>Result Field From</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cb5__ResultField__c</fullName>
        <label>Result Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__ResultObjectType__c</fullName>
        <label>Result Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__SourceFieldFrom__c</fullName>
        <defaultValue>&apos;Parent&apos;</defaultValue>
        <label>Source Field From</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cb5__SourceField__c</fullName>
        <label>Source Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__SourceObjectType__c</fullName>
        <label>Source Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__SpecifyDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SpecifyDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__isGlobal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Global</label>
        <type>Checkbox</type>
    </fields>
    <label>CB Modeling Line</label>
    <nameField>
        <label>CB Modeling Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Modeling Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>